matrix/ingress-chat-sax.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: continuwuity-chat
  namespace: matrix
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`chat.sax.lgbt`)
      services:
        - name: continuwuity
          kind: Service
          port: http
  tls:
    certResolver: cert-resolver
    domains:
      - main: chat.sax.lgbt
